# swapie_api_mobile

./: .env.example  .gitignore  Cargo.toml  Dockerfile  NOWE_API.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: nginx.conf  proxy_params  setup-server.sh
locales/: en.json  pl.json
migrations/: 001_initial_schema.sql
src/: main.rs
src/config/: app.rs  database.rs  mod.rs  rabbitmq.rs
src/dto/: mod.rs
src/errors/: mod.rs
src/handlers/: admin.rs  auth.rs  books.rs  chat.rs  delivery.rs  mod.rs  notifications.rs  offers.rs  payments.rs  posts.rs  profile.rs  public.rs  reviews.rs  stripe_connect.rs  swap_center.rs  swipe.rs  terms.rs  users.rs
src/i18n/: mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: admin.rs  book.rs  book_match.rs  delivery.rs  genre.rs  media.rs  message.rs  mod.rs  notification.rs  payment.rs  review.rs  swipe.rs  trade.rs  user.rs  user_extras.rs
src/routes/: mod.rs
src/services/: auth.rs  book.rs  chat.rs  delivery.rs  mod.rs  notification.rs  profile.rs  queue.rs  review.rs  storage.rs  stripe_connect.rs  stripe_service.rs  swap_center.rs  swipe.rs  trade.rs
src/utils/: mod.rs
src/workers/: mod.rs  processor.rs  scheduler.rs
